# MATHBOT

./: .env.example  README.md  pyproject.toml  requirements.txt  server.py
static/: AVATAR_INSTRUCTIONS.md  app.js  index.html  styles.css
