[project]
name = "mathbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
	dependencies = [
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.36.0",
]
    
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.1"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
openai = "^1.28.0"
